<resources>
    <string name="app_name">华小圈</string>
    <string name="test_text">测试测试测试测试测试测试测试测试测试测试
    测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
    测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>

    <string name="sign_in_tip">请输入您的用户名和密码.</string>
    <string name="user_name_text">用户名</string>
    <string name="password_text">密码</string>
    <string name="sign_text">登录</string>
    <string name="register_text">注册</string>
    <string name="forgot_password_text">忘记密码</string>
    <string name="new_user_help_text">新用户帮助</string>
    <string name="new_user_help_content">
        新生用户名为学号，初始密码（如果未修改）为证件号后6位（其中大陆学生证件号为身份证号，港澳学生证件号为回乡证号，台湾学生证件号为台胞证号，外国留学生证件号为护照号），忽略括号，字母均为小写。如果密码仍然不正确，验证不通过，请本人携带一卡通证件到田家炳负二楼卡务中心进行密码重置操作。
      新进教师用户名为教工号，初始密码为身份证号后6位。（如有x使用小写x）</string>
    <string name="new_user_help_title">《新用户帮助》</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="title_home">首页</string>
    <string name="title_letter">消息</string>
    <string name="title_mine">我的</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reminder_head">reminder_head</string>
</resources>